# rust-sdk

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml  release-please.yml
src/: client.rs  error.rs  lib.rs  types.rs
tests/: client_tests.rs  integration_test.rs
